Update and rename IndexCss.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="menu">
         <!--Usei a tag ul para criar uma lista desoordenada usando como menu e uma class para estilizar no css-->
         <ul>
-            <li><a href="IndexCss.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="#">Sobre</a>
                 <ul id="submenu">
                     <li><a href="pag2sobrecss.html">História</a></li>
